Exercise 1: RAG agent with Chroma persistence and adaptive retrieval

--- a/ai_agents_hospitality-api/requirements.txt
+++ b/ai_agents_hospitality-api/requirements.txt
@@ -12,6 +12,8 @@ langchain-core>=0.2.0
 langchain-google-genai>=1.0.0
 langchain-openai>=0.1.0  # For OpenAI-compatible proxy support
 langchain-community>=0.2.0
-
+chromadb>=0.3.28
+sentence-transformers
+jq
 
 
