--- a/ai_agents_hospitality-api/pyproject.toml
+++ b/ai_agents_hospitality-api/pyproject.toml
@@ -10,6 +10,9 @@ dependencies = [
     "jinja2==3.1.6",
     "pydantic-settings>=2.0.0",
     "python-multipart>=0.0.6",
+    "chromadb>=0.5.0",
+    "langchain-community>=0.2.0",
+    "langchain-core>=0.2.0",
 ]
 
 [build-system]
