--- a/prj-docker-compose/docker-compose.yaml
+++ b/prj-docker-compose/docker-compose.yaml
@@ -1,5 +1,18 @@
-
 services:
+
+  vector-db:
+    image: chromadb/chroma:latest
+    container_name: vector-db
+    ports:
+      - "8002:8000"   # host:container (para healthcheck y debug)
+    environment:
+      - IS_PERSISTENT=TRUE
+      - ANONYMIZED_TELEMETRY=FALSE
+      # Opcional: autenticación / settings avanzados (no lo metemos por ahora)
+    volumes:
+      - vector_db_data:/chroma/chroma
+    networks:
+      - prj_hospitality-network
 
   ai_agents_hospitality-api:
     build:
@@ -12,6 +25,7 @@ services:
       - "${API_PORT}:${API_PORT}"
     depends_on:
       - bookings-db-data-loader
+      - vector-db
     environment:
       - ENVIRONMENT=development.localcontainer
       - AI_AGENTIC_API_KEY=${AI_AGENTIC_API_KEY}
@@ -22,8 +36,18 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+      - VECTOR_DB_HOST=${VECTOR_DB_HOST}
+      - VECTOR_DB_PORT=${VECTOR_DB_PORT}
+      - VECTOR_DB_COLLECTION=${VECTOR_DB_COLLECTION}
+      - RAG_FORCE_REINDEX=0
+      - RAG_LOG_CHUNKS=1   # opcional para ver qué mete
+
     env_file:
       - .env
+    volumes:
+      - ../ai_agents_hospitality-api:/app
+      - ../bookings-db/output_files/hotels:/app/data/hotels:ro
+
     networks:
       - prj_hospitality-network
 
@@ -65,6 +89,7 @@ services:
 
 volumes:
   bookings_postgresql-db:
+  vector_db_data:
 
 networks:
   prj_hospitality-network:
