--- a/ai_agents_hospitality-api/config/agent_config.yaml
+++ b/ai_agents_hospitality-api/config/agent_config.yaml
@@ -5,11 +5,15 @@
 
 agent:
   # LLM Provider: "gemini" or "openai"
-  provider: "gemini"
+  #provider: "gemini"
   
   # Model name
-  model: "gemini-2.5-flash-lite"
+  #model: "gemini-2.5-flash-lite"
   
   # Temperature (0.0 to 1.0)
-  temperature: 0
+  #temperature: 0
 
+agent:
+  provider: "openai"
+  model: "gpt-4.1-mini"
+  temperature: 0
